# BezmaklerDom

./: .gitignore  README.md  pyproject.toml
apps/common/: models.py
apps/common/migrations/: 0001_initial.py
apps/estate/: models.py  urls.py  views.py
apps/estate/migrations/: 0001_initial.py
core/: settings.py  urls.py
templates/: about.html  base.html  property-grid.html
templates/estate/: index.html
templates/homework/: index.html  style.css
